// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
.emotion-0 {
  padding: 5px 0px 0px 5px;
}

<ul
  class="ant-timeline emotion-0"
  id="default"
/>
`;

exports[`Render properties.mode: alternate - value[0] 1`] = `
.emotion-0 {
  padding: 5px 0px 0px 5px;
}

<ul
  class="ant-timeline ant-timeline-alternate emotion-0"
  id="properties.mode: alternate"
>
  <li
    class="ant-timeline-item ant-timeline-item-left"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-red"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.mode: alternate_0_icon","title":"AiOutlineFire","className":"css-1xdhyk6","color":"red","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-0-Title 1"
        style="border: 1px solid red; padding: 10px;"
      >
        Title 1
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-right"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-green"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.mode: alternate_1_icon","title":"AiOutlineSetting","className":"css-1xdhyk6","color":"green","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-1-Text 2"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 2
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-last ant-timeline-item-left"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-blue"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.mode: alternate_2_icon","title":"AiOutlineRocket","className":"css-1xdhyk6","color":"blue","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-2-Text 3"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 3
      </div>
    </div>
  </li>
</ul>
`;

exports[`Render properties.mode: alternate - value[1] 1`] = `
.emotion-0 {
  padding: 5px 0px 0px 5px;
}

<ul
  class="ant-timeline ant-timeline-alternate emotion-0"
  id="properties.mode: alternate"
>
  <li
    class="ant-timeline-item ant-timeline-item-left"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-red"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.mode: alternate_0_icon","title":"AiOutlineFire","className":"css-1xdhyk6","color":"red","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-0-Title 1"
        style="border: 1px solid red; padding: 10px;"
      >
        Title 1
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-right"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-green"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.mode: alternate_1_icon","title":"AiOutlineSetting","className":"css-1xdhyk6","color":"green","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-1-Text 2"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 2
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-last ant-timeline-item-left"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-blue"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.mode: alternate_2_icon","title":"AiOutlineRocket","className":"css-1xdhyk6","color":"blue","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-2-Text 3"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 3
      </div>
    </div>
  </li>
</ul>
`;

exports[`Render properties.mode: left - value[0] 1`] = `
.emotion-0 {
  padding: 5px 0px 0px 5px;
}

<ul
  class="ant-timeline ant-timeline-left emotion-0"
  id="properties.mode: left"
>
  <li
    class="ant-timeline-item ant-timeline-item-left"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-red"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.mode: left_0_icon","title":"AiOutlineFire","className":"css-1xdhyk6","color":"red","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-0-Title 1"
        style="border: 1px solid red; padding: 10px;"
      >
        Title 1
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-left"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-green"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.mode: left_1_icon","title":"AiOutlineSetting","className":"css-1xdhyk6","color":"green","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-1-Text 2"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 2
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-last ant-timeline-item-left"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-blue"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.mode: left_2_icon","title":"AiOutlineRocket","className":"css-1xdhyk6","color":"blue","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-2-Text 3"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 3
      </div>
    </div>
  </li>
</ul>
`;

exports[`Render properties.mode: left - value[1] 1`] = `
.emotion-0 {
  padding: 5px 0px 0px 5px;
}

<ul
  class="ant-timeline ant-timeline-left emotion-0"
  id="properties.mode: left"
>
  <li
    class="ant-timeline-item ant-timeline-item-left"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-red"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.mode: left_0_icon","title":"AiOutlineFire","className":"css-1xdhyk6","color":"red","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-0-Title 1"
        style="border: 1px solid red; padding: 10px;"
      >
        Title 1
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-left"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-green"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.mode: left_1_icon","title":"AiOutlineSetting","className":"css-1xdhyk6","color":"green","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-1-Text 2"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 2
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-last ant-timeline-item-left"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-blue"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.mode: left_2_icon","title":"AiOutlineRocket","className":"css-1xdhyk6","color":"blue","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-2-Text 3"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 3
      </div>
    </div>
  </li>
</ul>
`;

exports[`Render properties.mode: right - value[0] 1`] = `
.emotion-0 {
  padding: 5px 0px 0px 5px;
}

<ul
  class="ant-timeline ant-timeline-right emotion-0"
  id="properties.mode: right"
>
  <li
    class="ant-timeline-item ant-timeline-item-right"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-red"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.mode: right_0_icon","title":"AiOutlineFire","className":"css-1xdhyk6","color":"red","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-0-Title 1"
        style="border: 1px solid red; padding: 10px;"
      >
        Title 1
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-right"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-green"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.mode: right_1_icon","title":"AiOutlineSetting","className":"css-1xdhyk6","color":"green","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-1-Text 2"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 2
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-last ant-timeline-item-right"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-blue"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.mode: right_2_icon","title":"AiOutlineRocket","className":"css-1xdhyk6","color":"blue","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-2-Text 3"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 3
      </div>
    </div>
  </li>
</ul>
`;

exports[`Render properties.mode: right - value[1] 1`] = `
.emotion-0 {
  padding: 5px 0px 0px 5px;
}

<ul
  class="ant-timeline ant-timeline-right emotion-0"
  id="properties.mode: right"
>
  <li
    class="ant-timeline-item ant-timeline-item-right"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-red"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.mode: right_0_icon","title":"AiOutlineFire","className":"css-1xdhyk6","color":"red","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-0-Title 1"
        style="border: 1px solid red; padding: 10px;"
      >
        Title 1
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-right"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-green"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.mode: right_1_icon","title":"AiOutlineSetting","className":"css-1xdhyk6","color":"green","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-1-Text 2"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 2
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-last ant-timeline-item-right"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-blue"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.mode: right_2_icon","title":"AiOutlineRocket","className":"css-1xdhyk6","color":"blue","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-2-Text 3"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 3
      </div>
    </div>
  </li>
</ul>
`;

exports[`Render properties.pending: true - value[0] 1`] = `
.emotion-0 {
  padding: 5px 0px 0px 5px;
}

<ul
  class="ant-timeline ant-timeline-pending emotion-0"
  id="properties.pending: true"
>
  <li
    class="ant-timeline-item"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-red"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.pending: true_0_icon","title":"AiOutlineFire","className":"css-1xdhyk6","color":"red","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-0-Title 1"
        style="border: 1px solid red; padding: 10px;"
      >
        Title 1
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-right"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-green"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.pending: true_1_icon","title":"AiOutlineSetting","className":"css-1xdhyk6","color":"green","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-1-Text 2"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 2
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-last"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-blue"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.pending: true_2_icon","title":"AiOutlineRocket","className":"css-1xdhyk6","color":"blue","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-2-Text 3"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 3
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-pending"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-blue"
    >
      <span
        aria-label="loading"
        class="anticon anticon-loading anticon-spin"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="loading"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
          />
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    />
  </li>
</ul>
`;

exports[`Render properties.pending: true - value[1] 1`] = `
.emotion-0 {
  padding: 5px 0px 0px 5px;
}

<ul
  class="ant-timeline ant-timeline-pending emotion-0"
  id="properties.pending: true"
>
  <li
    class="ant-timeline-item"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-red"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.pending: true_0_icon","title":"AiOutlineFire","className":"css-1xdhyk6","color":"red","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-0-Title 1"
        style="border: 1px solid red; padding: 10px;"
      >
        Title 1
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-right"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-green"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.pending: true_1_icon","title":"AiOutlineSetting","className":"css-1xdhyk6","color":"green","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-1-Text 2"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 2
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-last"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-blue"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.pending: true_2_icon","title":"AiOutlineRocket","className":"css-1xdhyk6","color":"blue","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-2-Text 3"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 3
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-pending"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-blue"
    >
      <span
        aria-label="loading"
        class="anticon anticon-loading anticon-spin"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="loading"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
          />
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    />
  </li>
</ul>
`;

exports[`Render properties.pendingDotIcon:  - value[0] 1`] = `
.emotion-0 {
  padding: 5px 0px 0px 5px;
}

<ul
  class="ant-timeline ant-timeline-pending emotion-0"
  id="properties.pendingDotIcon: "
>
  <li
    class="ant-timeline-item"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-red"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.pendingDotIcon: _0_icon","title":"AiOutlineFire","className":"css-1xdhyk6","color":"red","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-0-Title 1"
        style="border: 1px solid red; padding: 10px;"
      >
        Title 1
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-right"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-green"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.pendingDotIcon: _1_icon","title":"AiOutlineSetting","className":"css-1xdhyk6","color":"green","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-1-Text 2"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 2
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-last"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-blue"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.pendingDotIcon: _2_icon","title":"AiOutlineRocket","className":"css-1xdhyk6","color":"blue","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-2-Text 3"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 3
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-pending"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-blue"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.pendingDotIcon: _pendingDotIcon","className":"css-1p87wkm","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    />
  </li>
</ul>
`;

exports[`Render properties.pendingDotIcon:  - value[1] 1`] = `
.emotion-0 {
  padding: 5px 0px 0px 5px;
}

<ul
  class="ant-timeline ant-timeline-pending emotion-0"
  id="properties.pendingDotIcon: "
>
  <li
    class="ant-timeline-item"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-red"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.pendingDotIcon: _0_icon","title":"AiOutlineFire","className":"css-1xdhyk6","color":"red","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-0-Title 1"
        style="border: 1px solid red; padding: 10px;"
      >
        Title 1
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-right"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-green"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.pendingDotIcon: _1_icon","title":"AiOutlineSetting","className":"css-1xdhyk6","color":"green","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-1-Text 2"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 2
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-last"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-blue"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.pendingDotIcon: _2_icon","title":"AiOutlineRocket","className":"css-1xdhyk6","color":"blue","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-2-Text 3"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 3
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-pending"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-blue"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.pendingDotIcon: _pendingDotIcon","className":"css-1p87wkm","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    />
  </li>
</ul>
`;

exports[`Render properties.reverse: true - value[0] 1`] = `
.emotion-0 {
  padding: 5px 0px 0px 5px;
}

<ul
  class="ant-timeline ant-timeline-reverse emotion-0"
  id="properties.reverse: true"
>
  <li
    class="ant-timeline-item"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-blue"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.reverse: true_2_icon","title":"AiOutlineRocket","className":"css-1xdhyk6","color":"blue","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-2-Text 3"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 3
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-right"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-green"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.reverse: true_1_icon","title":"AiOutlineSetting","className":"css-1xdhyk6","color":"green","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-1-Text 2"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 2
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-last"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-red"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.reverse: true_0_icon","title":"AiOutlineFire","className":"css-1xdhyk6","color":"red","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-0-Title 1"
        style="border: 1px solid red; padding: 10px;"
      >
        Title 1
      </div>
    </div>
  </li>
</ul>
`;

exports[`Render properties.reverse: true - value[1] 1`] = `
.emotion-0 {
  padding: 5px 0px 0px 5px;
}

<ul
  class="ant-timeline ant-timeline-reverse emotion-0"
  id="properties.reverse: true"
>
  <li
    class="ant-timeline-item"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-blue"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.reverse: true_2_icon","title":"AiOutlineRocket","className":"css-1xdhyk6","color":"blue","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-2-Text 3"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 3
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-right"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-green"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.reverse: true_1_icon","title":"AiOutlineSetting","className":"css-1xdhyk6","color":"green","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-1-Text 2"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 2
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-last"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-red"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.reverse: true_0_icon","title":"AiOutlineFire","className":"css-1xdhyk6","color":"red","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-0-Title 1"
        style="border: 1px solid red; padding: 10px;"
      >
        Title 1
      </div>
    </div>
  </li>
</ul>
`;

exports[`Render required = true default - value[0] 1`] = `
.emotion-0 {
  padding: 5px 0px 0px 5px;
}

<ul
  class="ant-timeline emotion-0"
  id="default"
/>
`;

exports[`Render required = true properties.mode: alternate - value[0] 1`] = `
.emotion-0 {
  padding: 5px 0px 0px 5px;
}

<ul
  class="ant-timeline ant-timeline-alternate emotion-0"
  id="properties.mode: alternate"
>
  <li
    class="ant-timeline-item ant-timeline-item-left"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-red"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.mode: alternate_0_icon","title":"AiOutlineFire","className":"css-1xdhyk6","color":"red","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-0-Title 1"
        style="border: 1px solid red; padding: 10px;"
      >
        Title 1
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-right"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-green"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.mode: alternate_1_icon","title":"AiOutlineSetting","className":"css-1xdhyk6","color":"green","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-1-Text 2"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 2
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-last ant-timeline-item-left"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-blue"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.mode: alternate_2_icon","title":"AiOutlineRocket","className":"css-1xdhyk6","color":"blue","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-2-Text 3"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 3
      </div>
    </div>
  </li>
</ul>
`;

exports[`Render required = true properties.mode: alternate - value[1] 1`] = `
.emotion-0 {
  padding: 5px 0px 0px 5px;
}

<ul
  class="ant-timeline ant-timeline-alternate emotion-0"
  id="properties.mode: alternate"
>
  <li
    class="ant-timeline-item ant-timeline-item-left"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-red"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.mode: alternate_0_icon","title":"AiOutlineFire","className":"css-1xdhyk6","color":"red","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-0-Title 1"
        style="border: 1px solid red; padding: 10px;"
      >
        Title 1
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-right"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-green"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.mode: alternate_1_icon","title":"AiOutlineSetting","className":"css-1xdhyk6","color":"green","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-1-Text 2"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 2
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-last ant-timeline-item-left"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-blue"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.mode: alternate_2_icon","title":"AiOutlineRocket","className":"css-1xdhyk6","color":"blue","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-2-Text 3"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 3
      </div>
    </div>
  </li>
</ul>
`;

exports[`Render required = true properties.mode: left - value[0] 1`] = `
.emotion-0 {
  padding: 5px 0px 0px 5px;
}

<ul
  class="ant-timeline ant-timeline-left emotion-0"
  id="properties.mode: left"
>
  <li
    class="ant-timeline-item ant-timeline-item-left"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-red"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.mode: left_0_icon","title":"AiOutlineFire","className":"css-1xdhyk6","color":"red","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-0-Title 1"
        style="border: 1px solid red; padding: 10px;"
      >
        Title 1
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-left"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-green"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.mode: left_1_icon","title":"AiOutlineSetting","className":"css-1xdhyk6","color":"green","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-1-Text 2"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 2
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-last ant-timeline-item-left"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-blue"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.mode: left_2_icon","title":"AiOutlineRocket","className":"css-1xdhyk6","color":"blue","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-2-Text 3"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 3
      </div>
    </div>
  </li>
</ul>
`;

exports[`Render required = true properties.mode: left - value[1] 1`] = `
.emotion-0 {
  padding: 5px 0px 0px 5px;
}

<ul
  class="ant-timeline ant-timeline-left emotion-0"
  id="properties.mode: left"
>
  <li
    class="ant-timeline-item ant-timeline-item-left"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-red"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.mode: left_0_icon","title":"AiOutlineFire","className":"css-1xdhyk6","color":"red","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-0-Title 1"
        style="border: 1px solid red; padding: 10px;"
      >
        Title 1
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-left"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-green"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.mode: left_1_icon","title":"AiOutlineSetting","className":"css-1xdhyk6","color":"green","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-1-Text 2"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 2
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-last ant-timeline-item-left"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-blue"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.mode: left_2_icon","title":"AiOutlineRocket","className":"css-1xdhyk6","color":"blue","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-2-Text 3"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 3
      </div>
    </div>
  </li>
</ul>
`;

exports[`Render required = true properties.mode: right - value[0] 1`] = `
.emotion-0 {
  padding: 5px 0px 0px 5px;
}

<ul
  class="ant-timeline ant-timeline-right emotion-0"
  id="properties.mode: right"
>
  <li
    class="ant-timeline-item ant-timeline-item-right"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-red"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.mode: right_0_icon","title":"AiOutlineFire","className":"css-1xdhyk6","color":"red","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-0-Title 1"
        style="border: 1px solid red; padding: 10px;"
      >
        Title 1
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-right"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-green"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.mode: right_1_icon","title":"AiOutlineSetting","className":"css-1xdhyk6","color":"green","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-1-Text 2"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 2
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-last ant-timeline-item-right"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-blue"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.mode: right_2_icon","title":"AiOutlineRocket","className":"css-1xdhyk6","color":"blue","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-2-Text 3"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 3
      </div>
    </div>
  </li>
</ul>
`;

exports[`Render required = true properties.mode: right - value[1] 1`] = `
.emotion-0 {
  padding: 5px 0px 0px 5px;
}

<ul
  class="ant-timeline ant-timeline-right emotion-0"
  id="properties.mode: right"
>
  <li
    class="ant-timeline-item ant-timeline-item-right"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-red"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.mode: right_0_icon","title":"AiOutlineFire","className":"css-1xdhyk6","color":"red","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-0-Title 1"
        style="border: 1px solid red; padding: 10px;"
      >
        Title 1
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-right"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-green"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.mode: right_1_icon","title":"AiOutlineSetting","className":"css-1xdhyk6","color":"green","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-1-Text 2"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 2
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-last ant-timeline-item-right"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-blue"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.mode: right_2_icon","title":"AiOutlineRocket","className":"css-1xdhyk6","color":"blue","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-2-Text 3"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 3
      </div>
    </div>
  </li>
</ul>
`;

exports[`Render required = true properties.pending: true - value[0] 1`] = `
.emotion-0 {
  padding: 5px 0px 0px 5px;
}

<ul
  class="ant-timeline ant-timeline-pending emotion-0"
  id="properties.pending: true"
>
  <li
    class="ant-timeline-item"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-red"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.pending: true_0_icon","title":"AiOutlineFire","className":"css-1xdhyk6","color":"red","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-0-Title 1"
        style="border: 1px solid red; padding: 10px;"
      >
        Title 1
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-right"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-green"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.pending: true_1_icon","title":"AiOutlineSetting","className":"css-1xdhyk6","color":"green","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-1-Text 2"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 2
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-last"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-blue"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.pending: true_2_icon","title":"AiOutlineRocket","className":"css-1xdhyk6","color":"blue","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-2-Text 3"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 3
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-pending"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-blue"
    >
      <span
        aria-label="loading"
        class="anticon anticon-loading anticon-spin"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="loading"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
          />
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    />
  </li>
</ul>
`;

exports[`Render required = true properties.pending: true - value[1] 1`] = `
.emotion-0 {
  padding: 5px 0px 0px 5px;
}

<ul
  class="ant-timeline ant-timeline-pending emotion-0"
  id="properties.pending: true"
>
  <li
    class="ant-timeline-item"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-red"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.pending: true_0_icon","title":"AiOutlineFire","className":"css-1xdhyk6","color":"red","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-0-Title 1"
        style="border: 1px solid red; padding: 10px;"
      >
        Title 1
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-right"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-green"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.pending: true_1_icon","title":"AiOutlineSetting","className":"css-1xdhyk6","color":"green","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-1-Text 2"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 2
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-last"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-blue"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.pending: true_2_icon","title":"AiOutlineRocket","className":"css-1xdhyk6","color":"blue","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-2-Text 3"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 3
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-pending"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-blue"
    >
      <span
        aria-label="loading"
        class="anticon anticon-loading anticon-spin"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="loading"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
          />
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    />
  </li>
</ul>
`;

exports[`Render required = true properties.pendingDotIcon:  - value[0] 1`] = `
.emotion-0 {
  padding: 5px 0px 0px 5px;
}

<ul
  class="ant-timeline ant-timeline-pending emotion-0"
  id="properties.pendingDotIcon: "
>
  <li
    class="ant-timeline-item"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-red"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.pendingDotIcon: _0_icon","title":"AiOutlineFire","className":"css-1xdhyk6","color":"red","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-0-Title 1"
        style="border: 1px solid red; padding: 10px;"
      >
        Title 1
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-right"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-green"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.pendingDotIcon: _1_icon","title":"AiOutlineSetting","className":"css-1xdhyk6","color":"green","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-1-Text 2"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 2
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-last"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-blue"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.pendingDotIcon: _2_icon","title":"AiOutlineRocket","className":"css-1xdhyk6","color":"blue","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-2-Text 3"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 3
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-pending"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-blue"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.pendingDotIcon: _pendingDotIcon","className":"css-1p87wkm","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    />
  </li>
</ul>
`;

exports[`Render required = true properties.pendingDotIcon:  - value[1] 1`] = `
.emotion-0 {
  padding: 5px 0px 0px 5px;
}

<ul
  class="ant-timeline ant-timeline-pending emotion-0"
  id="properties.pendingDotIcon: "
>
  <li
    class="ant-timeline-item"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-red"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.pendingDotIcon: _0_icon","title":"AiOutlineFire","className":"css-1xdhyk6","color":"red","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-0-Title 1"
        style="border: 1px solid red; padding: 10px;"
      >
        Title 1
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-right"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-green"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.pendingDotIcon: _1_icon","title":"AiOutlineSetting","className":"css-1xdhyk6","color":"green","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-1-Text 2"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 2
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-last"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-blue"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.pendingDotIcon: _2_icon","title":"AiOutlineRocket","className":"css-1xdhyk6","color":"blue","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-2-Text 3"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 3
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-pending"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-blue"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.pendingDotIcon: _pendingDotIcon","className":"css-1p87wkm","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    />
  </li>
</ul>
`;

exports[`Render required = true properties.reverse: true - value[0] 1`] = `
.emotion-0 {
  padding: 5px 0px 0px 5px;
}

<ul
  class="ant-timeline ant-timeline-reverse emotion-0"
  id="properties.reverse: true"
>
  <li
    class="ant-timeline-item"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-blue"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.reverse: true_2_icon","title":"AiOutlineRocket","className":"css-1xdhyk6","color":"blue","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-2-Text 3"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 3
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-right"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-green"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.reverse: true_1_icon","title":"AiOutlineSetting","className":"css-1xdhyk6","color":"green","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-1-Text 2"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 2
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-last"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-red"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.reverse: true_0_icon","title":"AiOutlineFire","className":"css-1xdhyk6","color":"red","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-0-Title 1"
        style="border: 1px solid red; padding: 10px;"
      >
        Title 1
      </div>
    </div>
  </li>
</ul>
`;

exports[`Render required = true properties.reverse: true - value[1] 1`] = `
.emotion-0 {
  padding: 5px 0px 0px 5px;
}

<ul
  class="ant-timeline ant-timeline-reverse emotion-0"
  id="properties.reverse: true"
>
  <li
    class="ant-timeline-item"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-blue"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.reverse: true_2_icon","title":"AiOutlineRocket","className":"css-1xdhyk6","color":"blue","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-2-Text 3"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 3
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-right"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-green"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.reverse: true_1_icon","title":"AiOutlineSetting","className":"css-1xdhyk6","color":"green","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-1-Text 2"
        style="border: 1px solid red; padding: 10px;"
      >
        Text 2
      </div>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-last"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-red"
    >
      <span
        class="anticon"
        role="img"
      >
        <svg
          data-testid="AiOutlineExclamationCircle"
        >
          {"id":"properties.reverse: true_0_icon","title":"AiOutlineFire","className":"css-1xdhyk6","color":"red","required":false}
        </svg>
      </span>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      <div
        data-testid="list-0-Title 1"
        style="border: 1px solid red; padding: 10px;"
      >
        Title 1
      </div>
    </div>
  </li>
</ul>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.mode: alternate 1`] = `true`;

exports[`Test Schema properties.mode: alternate 2`] = `null`;

exports[`Test Schema properties.mode: left 1`] = `true`;

exports[`Test Schema properties.mode: left 2`] = `null`;

exports[`Test Schema properties.mode: right 1`] = `true`;

exports[`Test Schema properties.mode: right 2`] = `null`;

exports[`Test Schema properties.pending: true 1`] = `true`;

exports[`Test Schema properties.pending: true 2`] = `null`;

exports[`Test Schema properties.pendingDotIcon:  1`] = `true`;

exports[`Test Schema properties.pendingDotIcon:  2`] = `null`;

exports[`Test Schema properties.reverse: true 1`] = `true`;

exports[`Test Schema properties.reverse: true 2`] = `null`;
